--- a/src/components/ArticlePage.astro
+++ b/src/components/ArticlePage.astro
@@ -270,6 +270,6 @@ const i = {
     </div>
 
     {/* === Production Cost (bottom of article) === */}
-    <ArticleCost slug={currentSlug} lang={lang} />
+    <ArticleCost slug={currentSlug} lang={lang} articleTitle={title} />
   </article>
 </BaseLayout>
